frontend mostly seems to work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,16 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # Server Configuration
 server.port=8080
 
+# Thymeleaf Configuration
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
 
+logging.level.org.thymeleaf=DEBUG
+logging.level.org.springframework.web.servlet.view=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.com.example.todo=DEBUG
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
+logging.level.org.springframework.context.annotation=DEBUG
