--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
+spring.mvc.hiddenmethod.filter.enabled=true
+
 logging.level.org.thymeleaf=DEBUG
 logging.level.org.springframework.web.servlet.view=DEBUG
 logging.level.org.springframework.web=DEBUG
