--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=todo
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/todoapp?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# H2 Database Configuration (Persistent file-based)
+spring.datasource.url=jdbc:h2:file:./data/todoapp;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+
 
 # Server Configuration
 server.port=8080
@@ -23,10 +23,3 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 spring.mvc.hiddenmethod.filter.enabled=true
-
-logging.level.org.thymeleaf=DEBUG
-logging.level.org.springframework.web.servlet.view=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.com.example.todo=DEBUG
-logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
-logging.level.org.springframework.context.annotation=DEBUG
