--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=todo
 
-# H2 Database Configuration (Persistent file-based)
+# H2 Database Configuration
 spring.datasource.url=jdbc:h2:file:./data/todoapp;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -9,8 +9,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-
 
 # Server Configuration
 server.port=8080
